@@ -1,3 +1,12 @@
+2017-06-12  Yusuke Suzuki  <utatane.tea@gmail.com>
+
+        Unreviewed, add branch64(Cond, BaseIndex, RegisterID) for ARM64
+        https://bugs.webkit.org/show_bug.cgi?id=172421
+
+        * assembler/MacroAssemblerARM64.h:
+        (JSC::MacroAssemblerARM64::branch64):
+        (JSC::MacroAssemblerARM64::branchPtr):
+
 2017-06-12  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r218093.
